--- a/client/style.css
+++ b/client/style.css
@@ -2,7 +2,9 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-flow: column;
   justify-content: center;
+  align-items: center;
   font-family: monospace;
   color: white;
   background-color: black;
